--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   assets:
     - assets/images/splash/
     - assets/images/vector/
+    - assets/images/planet/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
