--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,9 +60,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/background/
     - assets/images/splash/
     - assets/images/vector/
     - assets/images/planet/
+    - assets/images/earth/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
